// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
      $
    </Text>
    <TextInput
      allowFontScaling={true}
      editable={false}
      keyboardType="decimal-pad"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "center",
            "color": "black",
            "marginBottom": 8,
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "auto",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="100"
    />
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DADADA",
        },
        Object {
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "marginTop": 7,
            },
          ]
        }
      >
        Fee $
        100
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginTop": 7,
          }
        }
      >
        555 DOT
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test three 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "opacity": 1,
      "width": "90%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={false}
      keyboardType="decimal-pad"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "color": "#BFBDBD",
            "marginBottom": 8,
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "90%",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="Enter amount"
    />
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DADADA",
        },
        Object {
          "width": "90%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "marginTop": 7,
            },
          ]
        }
      >
        Fee $
        11
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginTop": 7,
          }
        }
      >
        $111
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test two 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "opacity": 1,
      "width": "90%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={false}
      keyboardType="decimal-pad"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 17,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "center",
            "color": "black",
            "marginBottom": 8,
            "marginTop": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": "auto",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="100"
    />
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 17,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
    >
       KSM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DADADA",
        },
        Object {
          "width": "90%",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 15,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "marginTop": 7,
            },
          ]
        }
      >
        Fee $
        11
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "width": "50%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginTop": 7,
          }
        }
      >
        $111
      </Text>
    </View>
  </View>
</View>
`;
